objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Details__c</fullName>
        <label>Brief Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compensation_Range__c</fullName>
        <description>The compensation range for the position</description>
        <label>Compensation Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <description>Experience level expected for the job position</description>
        <label>Experience Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Field to specify the Hiring Manager</description>
        <inlineHelpText>Select a Hiring Manager</inlineHelpText>
        <label>Hiring Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>